--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/style.css">
-    <script src="/src/index.js"></script>
+    <link rel="stylesheet" href="src/style.css">
+    <script src="src/index.js"></script>
     <title>Feliz Vida</title>   
 
 </head>
